--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -1,4 +1,4 @@
-name: "Publish"
+name: "Build and Publish"
 
 on:
   workflow_dispatch:
@@ -10,7 +10,7 @@ env:
 jobs:
 
   publish:
-    name: Publish
+    name: Build and Publish
 
     permissions:
       contents: read
